--- a/src/app/components/masterpage/nav/nav.component.html
+++ b/src/app/components/masterpage/nav/nav.component.html
@@ -11,6 +11,11 @@
           <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/manager']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <i class="fa fa-users" aria-hidden="true"></i> Manager
+        </a>
+      </li>
 
     </ul>
     <div class="form-inline my-2 my-lg-0">
