--- a/src/app/components/masterpage/header/header.component.html
+++ b/src/app/components/masterpage/header/header.component.html
@@ -1,9 +1,8 @@
 <header>
   <div class="container-fluid bg-mello">
     <nav class="navbar navbar-expand-lg navbar-inverse navbar-ngbootstrap">
-      <a class="navbar-brand" [routerLink]="['/']">
-        <img src="assets/img/logo.png" alt="mello labs" />
-        <strong class="logo">mello</strong> Labs
+      <a class="navbar-brand" [routerLink]="['/']" id="logo">
+        <span class="logo"></span>
       </a>
       <ng-content></ng-content>
     </nav>
