--- a/src/app/components/masterpage/nav/nav.component.html
+++ b/src/app/components/masterpage/nav/nav.component.html
@@ -8,7 +8,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-          <i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard
+          <i class="fa fa-tachometer" aria-hidden="true"></i> JAM Dashboard
         </a>
       </li>
       <li class="nav-item">
