Self contained modules for jam logic

--- a/src/app/components/masterpage/nav/nav.component.html
+++ b/src/app/components/masterpage/nav/nav.component.html
@@ -7,12 +7,12 @@
 
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <a class="nav-link" [routerLink]="['/jam4pipeline']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
           <i class="fa fa-tachometer" aria-hidden="true"></i> JAM Dashboard
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/manager']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+        <a class="nav-link" [routerLink]="['/jam4pipeline/manager']" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
           <i class="fa fa-users" aria-hidden="true"></i> Manager
         </a>
       </li>
