Refactored from ng-bootstrap to ngx-bootstrap

--- a/src/app/routes/jam4pipeline/components/state/state.component.html
+++ b/src/app/routes/jam4pipeline/components/state/state.component.html
@@ -3,7 +3,7 @@
   <p><strong>Error loading data</strong></p>
   <p><em>Send the information below to the tech monkeys, they love this stuff</em></p>
   <hr />
-  <div> {{state.error | json }}</div>
+  <div><pre> {{state.error | json }}</pre></div>
 </div>
 <ng-container *ngIf="!state.loading && !state.error">
   <ng-content></ng-content>
