--- a/src/app/routes/jam4pipeline/components/tasks/tasks.component.html
+++ b/src/app/routes/jam4pipeline/components/tasks/tasks.component.html
@@ -12,19 +12,12 @@
       <th width="10%" *ngIf="!manager">Follow Up</th>
       <th width="10%" *ngIf="!manager">Last Followed Up</th>
       <th width="10%" *ngIf="!manager">Date Finished</th>
-      <!--
-  <th width="8%" *ngIf="!manager && !finished">Annoy User</th>
-  -->
+    
       <th width="8%" *ngIf="manager && !finished">Assign</th>
       <th width="10%" *ngIf="manager && !finished">
-        <!--
-    <app-launch-modal classes="btn btn-xs btn-secondary d-inline-block float-right" [disabled]="bulkDisabled"
-                      modal="AssignComponent" size="lg" [data]="loans"
-                      (success)="fileUploadComplete($event)">
-      <i class="fa fa-share" aria-hidden="true"></i>
-    </app-launch-modal>
-    --> Launch Modal
-        Bulk Assign
+        <a (click)="modals.openModalWithComponent('assign',model[entry.id])">
+          <i class="fa fa-share" aria-hidden="true"></i>
+        </a>
       </th>
       <th *ngIf="finished">Date Finished</th>
     </tr>
@@ -65,31 +58,11 @@
         </small>
       </td>
       <td class="text-center" *ngIf="!manager">
-        Launch Modal
-        <!--
-    <app-launch-modal classes="btn btn-sm btn-secondary w-100 text-center" [disabled]="!model[entry.id]?.dateStarted"
-                      modal="DocumentUploadComponent" size="lg" [data]="entry.id"
-                      (success)="fileUploadComplete($event)">
-      <i class="fa fa-thumbs-up" aria-hidden="true"></i> Finish
-    </app-launch-modal>
-    -->
+        <a (click)="modals.openModalWithComponent('upload',model[entry.id])"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Finish</a>
       </td>
-      <!--
-  <td *ngIf="!manager && !finished">
-    <button class="btn btn-sm btn-secondary w-100 text-center" (click)="annoy(entry.id)">
-      <i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Annoy User
-    </button>
-  </td>
-  -->
       <td class="text-center" *ngIf="manager && !finished">
-      lAUNCH mODAL
-        <!--
-  <app-launch-modal classes="btn btn-sm btn-secondary w-100 text-center"
-                    modal="AssignComponent" size="lg" [data]="loans"
-                    (success)="fileUploadComplete($event)">
-    <i class="fa fa-share" aria-hidden="true"></i> Assign
-  </app-launch-modal>
-  -->
+        <a (click)="modals.openModalWithComponent('assign',model[entry.id])"><i class="fa fa-thumbs-up" aria-hidden="true"></i> Finish</a>
+
       </td>
       <td class="text-center" *ngIf="manager && !finished" style="position:relative;">
         <label class="mb-0 pt-2 pb-2">
