--- a/src/app/routes/jam4pipeline/components/users/users.component.html
+++ b/src/app/routes/jam4pipeline/components/users/users.component.html
@@ -13,36 +13,20 @@
     <tr *ngFor="let entry of users">
       <td>{{ entry.name }}</td>
       <td>
-        <!--
-        <app-launch-modal class="d-block" classes="d-block"
-                          modal="TasksModalComponent" size="lg" [data]="users" [isButton]="false"
-                          (success)="fileUploadComplete($event)">
+        <a (click)="modals.openModalWithComponent('tasks',entry)">
           {{ entry.tasksTotal }}
-        </app-launch-modal>
-        -->
-        {{ entry.tasksTotal }}
+        </a>
       </td>
       <td>
-        <!--
-        <app-launch-modal class="d-block" classes="d-block"
-                          modal="TasksModalComponent" size="lg" [data]="users" [isButton]="false"
-                          (success)="fileUploadComplete($event)">
+        <a (click)="modals.openModalWithComponent('tasks',entry)">
           {{ entry.tasksNotStarted }}
-        </app-launch-modal>
-        -->
-        {{ entry.tasksNotStarted }}
+        </a>
       </td>
       <td>
-        <!--
-        <app-launch-modal class="d-block" classes="d-block"
-                          modal="TasksModalComponent" size="lg" [data]="users" [isButton]="false"
-                          (success)="fileUploadComplete($event)">
+        <a (click)="modals.openModalWithComponent('tasks',entry)">
           {{ entry.tasksOld }}
-        </app-launch-modal>
-        -->
-        {{ entry.tasksOld }}
+        </a>
       </td>
-   
     </tr>
   </tbody>
 </table>
