--- a/src/app/routes/jam4pipeline/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/jam4pipeline/routes/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
-<div id="app-dashboard" class="container-fluid" *ngIf="{ loans : loans$ | async } as routeData">
+<div id="app-dashboard" class="container-fluid" *ngIf="{ tasks : tasks$ | async } as routeData">
 
-  <app-state [state]="routeData.loans">
-    <app-tasks [loans]="routeData.loans.data" [manager]="false" [finished]="false" (action)="action($event)"></app-tasks>
+  <app-state [state]="routeData.tasks">
+    <app-tasks [tasks]="routeData.tasks.data" [manager]="false" [finished]="false" (action)="action($event)"></app-tasks>
   </app-state>
 
 </div>
