--- a/src/app/routes/jam4pipeline/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/jam4pipeline/routes/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div id="app-dashboard" class="container-fluid" *ngIf="{ tasks : tasks$ | async } as routeData">
+<div id="app-dashboard" class="container-fluid" *ngIf="{ tasks : tasksUser$ | async } as routeData">
 
   <app-state [state]="routeData.tasks">
     <app-tasks [tasks]="routeData.tasks.data" [manager]="false" [finished]="false" (action)="action($event)"></app-tasks>
